# swagger/swagger.json
@@ -478,6 +478,115 @@
                 }
             }
         },
+        "/save-game/DeleteSaveGame/{id}": {
+            "delete": {
+                "tags": [
+                    "save-game"
+                ],
+                "description": "delete the object",
+                "operationId": "SaveGameController.DeleteSaveGame",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The objectId you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "Id is empty"
+                    }
+                }
+            }
+        },
+        "/save-game/GetAllSaveGameOfUser/{userID}": {
+            "get": {
+                "tags": [
+                    "save-game"
+                ],
+                "description": "get all objects",
+                "operationId": "SaveGameController.GetAllOfUser",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "userID",
+                        "description": "The userID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.SaveGame"
+                        }
+                    },
+                    "403": {
+                        "description": ":userID is empty"
+                    }
+                }
+            }
+        },
+        "/save-game/GetSaveGame/{code}": {
+            "get": {
+                "tags": [
+                    "save-game"
+                ],
+                "description": "find object by code",
+                "operationId": "SaveGameController.Get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "code",
+                        "description": "the code you want to get",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{code} models.SaveGame"
+                    },
+                    "403": {
+                        "description": ":code is empty"
+                    }
+                }
+            }
+        },
+        "/save-game/PostSaveGame": {
+            "post": {
+                "tags": [
+                    "save-game"
+                ],
+                "description": "create object",
+                "operationId": "SaveGameController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "The object content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SaveGame"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} models.SaveGame"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
         "/topic/GetAll": {
             "get": {
                 "tags": [
@@ -582,6 +691,20 @@
         }
     },
     "definitions": {
+        "models.DoneQuest": {
+            "title": "DoneQuest",
+            "type": "object",
+            "properties": {
+                "Answer": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ChoosedAnswer": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.Host": {
             "title": "Host",
             "type": "object",
@@ -643,6 +766,28 @@
                 }
             }
         },
+        "models.SaveGame": {
+            "title": "SaveGame",
+            "type": "object",
+            "properties": {
+                "DoneQuest": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "MapQuest": {
+                    "$ref": "#/definitions/models.DoneQuest"
+                },
+                "QuizDone": {
+                    "type": "boolean"
+                },
+                "QuizID": {
+                    "type": "string"
+                },
+                "UserID": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Topic": {
             "title": "Topic",
             "type": "object",
@@ -660,6 +805,15 @@
                     "type": "string"
                 },
                 "TopicID": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "title": "User",
+            "type": "object",
+            "properties": {
+                "UserName": {
                     "type": "string"
                 }
             }
@@ -734,6 +888,14 @@
         {
             "name": "topic",
             "description": "Operations about topic\n"
+        },
+        {
+            "name": "topic",
+            "description": "Operations about topic\n"
+        },
+        {
+            "name": "save-game",
+            "description": "Operations about save game\n"
         }
     ]
 }
